@@ -1,3 +1,7 @@
+2011-02-19  Christian Kuhn  <lolli@schwarzbuch>
+
+	* Fixed bug #17644: Remove deprecated function getCountCacheTables() in SC_mod_web_ts_index (Thanks to Peter Beernink)
+
 2011-02-18  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Added feature #17658: htmlArea RTE: Write troubleshooting messages to JavaScript console
